test/fail/ForCountStmt-action.app
//Expression should be of type

application test

  function home(){
    for(i:Int from 0 to "7"){
    }
  }